(bowl,ipynb) Update notebook

--- a/applications/geoclaw/bowl_radial/bowl.ipynb
+++ b/applications/geoclaw/bowl_radial/bowl.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Then plot figure 10, a zoomed in portion of the solution in quadrant I. "
+    "Then plot figures 10 and 11 to compare the solution in the two refined regions."
    ]
   },
   {
