(swirl) Upate app

--- a/applications/advection/2d/swirl/swirl.ipynb
+++ b/applications/advection/2d/swirl/swirl.ipynb
@@ -43,11 +43,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# !mpirun -n 4 swirl"
+    "!mpirun -n 4 swirl"
    ]
   },
   {
