--- a/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
+++ b/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +70,8 @@
      "output_type": "stream",
      "text": [
       "Executed setplot successfully\n",
-      "Will plot 17 frames numbered: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n",
-      "Will make 3 figure(s) for each frame, numbered:  [0, 1, 2]\n",
+      "Will plot 3 frames numbered: [0, 1, 2]\n",
+      "Will make 2 figure(s) for each frame, numbered:  [0, 1]\n",
       "\n",
       "-----------------------------------\n",
       "\n",
@@ -83,12 +83,33 @@
       "Now making png files for all figures...\n",
       "    Reading  Frame 0 at t = 0  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
       "Frame 0 at time t = 0.0\n",
-      "    Reading  Frame 1 at t = 0.280356  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n"
+      "    Reading  Frame 1 at t = 0.280356  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
+      "Frame 1 at time t = 0.280356341592\n",
+      "    Reading  Frame 2 at t = 0.560713  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
+      "Frame 2 at time t = 0.560712683183\n",
+      "\n",
+      "-----------------------------------\n",
+      "\n",
+      "Creating latex file...\n",
+      "Directory '/Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots' \n",
+      "    already exists, files may be overwritten \n",
+      "\n",
+      "Latex file created:  \n",
+      "  /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots/plots.tex\n",
+      "\n",
+      "Use pdflatex to create pdf file\n",
+      "Created JSAnimation for figure 0\n",
+      "Created JSAnimation for figure 1\n",
+      "\n",
+      "--------------------------------------------------------\n",
+      "\n",
+      "Point your browser to:\n",
+      "    file:///Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots/_PlotIndex.html\n"
      ]
     }
    ],
    "source": [
-    "%run setplot.py"
+    "%run plot_slosh.py"
    ]
   },
   {
