(geoclaw/bowl_slosh) Update to ensure quiet exit;  update notebook

--- a/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
+++ b/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
@@ -17,6 +17,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create topo file and data files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run make_topo.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run make_data.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Run code in **serial mode** (will work, even if code is compiled with MPI)"
    ]
   },
@@ -43,11 +72,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# !mpirun -n 4 slosh"
+    "#!mpirun -n 4 slosh"
    ]
   },
   {
@@ -60,56 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executed setplot successfully\n",
-      "Will plot 3 frames numbered: [0, 1, 2]\n",
-      "Will make 2 figure(s) for each frame, numbered:  [0, 1]\n",
-      "\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Creating html pages for figures...\n",
-      "\n",
-      "Directory '/Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots' \n",
-      "    already exists, files may be overwritten \n",
-      "Now making png files for all figures...\n",
-      "    Reading  Frame 0 at t = 0  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
-      "Frame 0 at time t = 0.0\n",
-      "    Reading  Frame 1 at t = 0.280356  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
-      "Frame 1 at time t = 0.280356341592\n",
-      "    Reading  Frame 2 at t = 0.560713  from outdir = /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh\n",
-      "Frame 2 at time t = 0.560712683183\n",
-      "\n",
-      "-----------------------------------\n",
-      "\n",
-      "Creating latex file...\n",
-      "Directory '/Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots' \n",
-      "    already exists, files may be overwritten \n",
-      "\n",
-      "Latex file created:  \n",
-      "  /Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots/plots.tex\n",
-      "\n",
-      "Use pdflatex to create pdf file\n",
-      "Created JSAnimation for figure 0\n",
-      "Created JSAnimation for figure 1\n",
-      "\n",
-      "--------------------------------------------------------\n",
-      "\n",
-      "Point your browser to:\n",
-      "    file:///Users/calhoun/projects/ForestClaw/code/forestclaw/applications/geoclaw/bowl_slosh/_plots/_PlotIndex.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run plot_slosh.py"
+    "%run make_plots.py"
    ]
   },
   {
