(geoclaw/chile) Update notebook

--- a/applications/geoclaw/chile2010/chile2010.ipynb
+++ b/applications/geoclaw/chile2010/chile2010.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file plot_bowl.py."
+    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file make_plots.py."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Then plot figures 10 and 11 to compare the solution in the two refined regions."
+    "Plot results on realistic topography using **cesiumpy** (requires _cesiumpy_).  \n"
    ]
   },
   {
@@ -193,13 +193,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, you can view the results in **Google Earth** (requires Google Earth).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#!open _plots/Chile_2010.kmz    # requires Google Earth"
+   ]
   },
   {
    "cell_type": "markdown",
