--- a/applications/geoclaw/bowl_radial/bowl.ipynb
+++ b/applications/geoclaw/bowl_radial/bowl.ipynb
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "!mpirun -n 4 bowl"
+    "#!mpirun -n 4 bowl"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file plot_bowl.py."
+    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file make_plots.py."
    ]
   },
   {
