(bowl_slosh) Update example

--- a/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
+++ b/applications/geoclaw/bowl_slosh/bowl_slosh.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file plot_bowl.py."
+    "Plot figure 0, showing the entire solution.  To see detailed plotting parameters, see file make_plots.py."
    ]
   },
   {
