(clawpack/advection/swirl(cons)) Updates to Riemann solvers"

--- a/applications/clawpack/advection/2d/swirl_cons/notes/fwave.tex
+++ b/applications/clawpack/advection/2d/swirl_cons/notes/fwave.tex
@@ -119,16 +119,16 @@ u^*  = u_\ell - \frac{u_r - u_\ell}{\widehat{u}-a} (a - \widehat{u}) = u_r
 \end{equation}
 Waves, speeds and fluctuations ae given by
 \begin{align}
-\mathcal W_1 & \equiv \alpha_1 \mathbf r^1 = - \frac{u_r - u_\ell}{\widehat{u}-a} 
+\mathcal W_1  \equiv \alpha_1 \mathbf r^1 & = - \frac{u_r - u_\ell}{\widehat{u}-a} 
 \left(\begin{array}{c} \widehat{q} \\ a - \widehat{u}\end{array}\right) 
 = (u_r - u_\ell)
 \left(\begin{array}{c} \widehat{q}/\varepsilon \\ 
 1 \end{array}\right) \\
-\mathcal W_2 & \equiv \alpha_2 \mathbf r^2 = 
+\mathcal W_2  \equiv \alpha_2 \mathbf r^2 & = 
 \left(q_r - q_\ell + \frac{u_r - u_\ell}{\widehat{u}-a}\widehat{q} \right)
 \left(\begin{array}{c} 1 \\ 0\end{array}\right) 
 = \left(\begin{array}{c} q_r - q_\ell - (u_r - u_\ell) \widehat{q}/\varepsilon \\ 
-0 \end{array}\right) 
+0 \end{array}\right)
 \end{align}
 where we have set $\varepsilon \equiv a - \widehat{u}$. 
 The fluctuations are  defined as
