(clawpack/advection (cons)) More work on conservative advection

--- a/applications/clawpack/advection/2d/swirl_cons/swirl.ipynb
+++ b/applications/clawpack/advection/2d/swirl_cons/swirl.ipynb
@@ -4,11 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Swirl\n",
+    "# Advection (conservative form)\n",
     "\n",
     "---\n",
     "\n",
-    "Scalar advection problem with swirling velocity field.\n",
+    "Scalar advection problem in conservative form with  variable velocity field.\n",
+    "There are four Riemann solvers that can be tried out here, all described in \n",
+    "LeVeque (Cambridge Press, 2002)\n",
+    "\n",
+    "* rp-solver=1 : Q-star approach in which a $q^*$ value is defined to enforce flux  continuity across the stationery wave. \n",
+    "* rp-solver=2 : Wave-decomposition approach based on solving the Riemann problem for system of two equations.\n",
+    "* rp-solver=3 : Edge centered velocities are used to construct classic update based on flux formulation\n",
+    "* rp=sovler=4 : F-wave approach.\n",
+    "\n",
+    "Two examples are avaible.  In Example 1, the velocity field $u(x)$ is positive. In Example 2, the velocity field changes sign.  Both velocity fields have non-zero\n",
+    "divergence.\n",
     "\n",
     "---"
    ]
@@ -24,11 +34,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!swirl   "
+    "!swirlcons --user:example=2 --user:rp-solver=4"
    ]
   },
   {
@@ -47,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "!mpirun -n 4 swirl"
+    "#!mpirun -n 4 swirlcons"
    ]
   },
   {
