--- a/README
+++ b/README
@@ -1,16 +1,35 @@
+##########################################################################################
 ForestClaw
 
-[ForestClaw](http://www.forestclaw.org) is a parallel, multi-block adaptive finite volume
-code  for solving PDEs on a hierarchy of logically Cartesian meshes.    A distinguishing
-feature of ForestClaw is the fact that the multi-resolution grid hierarchy  is not stored
-as overlapping, nested grids as is conventionally done in block-structured  Cartesian grid
-codes, but rather as a composite structure of non-overlapping fixed sized  grids which are
-stored as leaves in a forest of quad- or octrees.  The basic adaptive  algorithm that we
-use does not differ in any fundamental way from that proposed by Berger and  Oliger (JCP,
-1984).
 
-ForestClaw is free software under a BSD-style license (see COPYING). The p4est library is 
-released under the GPL 2.0 (or later).  As it is generally linked with the forestclaw code, 
-binary distribution falls under GPL as well.
+ForestClaw (http://www.forestclaw.org) is a parallel, multi-block adaptive finite volume
+code  for solving PDEs on a hierarchy of logically Cartesian meshes.  
 
-Please visit the Wiki for Installation Instructions
+Features of ForestClaw : 
+
+* A multi-resolution hierarchy of grids is stored  as a composite structure of non-
+overlapping fixed sized  grids which are stored as leaves in a forest of quad- or octrees.
+
+    * Solvers for hyperbolic PDEs are available, including Clawpack 4.x, Clawpack 5.0 and
+      GeoClaw.
+    
+    * Users can easily extend ForestClaw with their own solvers. 
+    
+    * Fully parallel, using MPI distributed memory parallelism
+    
+    * Visualization tools include Matlab scripts, VisClaw (from Clawpack) and VTK output.
+
+For installation instructions, please visit our GitHub Wiki at
+
+               https://github.com/ForestClaw/ForestClaw/wiki 
+
+For more information on ForestClaw, visit our website at 
+
+               http://www.forestclaw.org
+
+
+ForestClaw is free software under a BSD-style license (see COPYING). The p4est library is
+released under the GPL 2.0 (or later).  As it is generally linked with the forestclaw
+code,  binary distribution falls under GPL as well.
+
+##########################################################################################
